RESOLVED FIXED50317
Sliders are not transformed after r50188
https://bugs.webkit.org/show_bug.cgi?id=50317
Summary Sliders are not transformed after r50188
Martin Robinson
Reported 2010-12-01 04:37:38 PST
http://trac.webkit.org/changeset/72839/ introduced a regression where input type=range widgets do not obey CSS transformations. This is observed by the failure of fast/forms/slider-transformed.html on the GTK+ bots.
Attachments
Patch for this issue (1.27 KB, patch)
2010-12-01 04:43 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-12-01 04:43:54 PST
Created attachment 75265 [details] Patch for this issue
Simon Fraser (smfr)
Comment 2 2010-12-01 08:02:25 PST
Thanks for fixing! I really wish there was an easy for for bug 19982.
Martin Robinson
Comment 3 2010-12-01 08:15:34 PST
Comment on attachment 75265 [details] Patch for this issue Clearing flags on attachment: 75265 Committed r73023: <http://trac.webkit.org/changeset/73023>
Martin Robinson
Comment 4 2010-12-01 08:15:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.