2010-12-01  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        Sliders are not transformed after r50188
        https://bugs.webkit.org/show_bug.cgi?id=50317

        Need to call updateLayerTransform during slider layout, as sliders
        may be transformed.

        No new tests. This patch should make fast/forms/slider-transformed.html
        pass on the GTK+ bots.

        * rendering/RenderSlider.cpp:
        (WebCore::RenderSlider::layout): Call updateLayerTransform here.

Canonical link: https://commits.webkit.org/63474@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73023 268f45cc-cd09-0410-ab3c-d52691b4dbfc