WebCore/rendering/RenderSlider.cpp
@@ -277,6 +277,7 @@ void RenderSlider::layout()
     setSize(baseSize);
     computeLogicalWidth();
     computeLogicalHeight();
+    updateLayerTransform();
 
     if (thumb) {
         if (oldSize != size())
